--- a/content/lessons/08/Now-You-Code/NYC4-Email-Harvest-Training.ipynb
+++ b/content/lessons/08/Now-You-Code/NYC4-Email-Harvest-Training.ipynb
@@ -1,114 +1,73 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Now You Code 4: Email Harvest Training\n",
-    "\n",
-    "Let's teach you how to extract emails from text. This has a variety of applications the most common being buiding an email list.\n",
-    "The best way to find the emails in the mailbox file is to search for lines in the file that begin with \"From: (similar to what we did in the lab). When you find an email write just the email address (not \"From:\" and the address) to \"NYC4-emails.txt\", and don't worry about duplicates.\n",
-    "\n",
-    "The program should print the number of emails it wrote to the file.\n",
-    "\n",
-    "Example Run:\n",
-    "\n",
-    "```\n",
-    "Wrote 27 emails to NYC4-emails.txt\n",
-    "```"
-   ]
+  "cells": [
+    {
+      "metadata": {},
+      "cell_type": "markdown",
+      "source": "# Now You Code 4: Email Harvest Training\n\nLet's teach you how to extract emails from text. This has a variety of applications the most common being buiding an email list.\nThe best way to find the emails in the mailbox file is to search for lines in the file that begin with \"From: (similar to what we did in the lab). When you find an email write just the email address (not \"From:\" and the address) to \"NYC4-emails.txt\", and don't worry about duplicates.\n\nThe program should print the number of emails it wrote to the file.\n\nExample Run:\n\n```\nWrote 27 emails to NYC4-emails.txt\n```"
+    },
+    {
+      "metadata": {},
+      "cell_type": "markdown",
+      "source": "## Step 1: Problem Analysis\n\nInput: (No user input, but we do read from the file `NYC4-emails.txt`\n\nOutput (The number of emails collected from the file, and a new file `NYC4-emails.txt` with one email per line.\n\nAlgorithm:\n\n```\n(write here)\n```\n"
+    },
+    {
+      "metadata": {
+        "trusted": false
+      },
+      "cell_type": "code",
+      "source": "## Step 2: Write the code\n\n\n    ",
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": false
+      },
+      "cell_type": "code",
+      "source": "## Step 3: Write a program to read the emails from NYC4-emails.txt and print them to the console\n\n",
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "metadata": {},
+      "cell_type": "markdown",
+      "source": "## Step 4: Questions\n\n1. Does this code actually \"detect\" emails? How does it find emails in the text?\n2. Explain how this program can be improved to prompt for an email file at to process runtime?\n3. Devise an approach to remove duplicate emails from the output file. You don't have to write as code, just explain it."
+    },
+    {
+      "metadata": {},
+      "cell_type": "markdown",
+      "source": "## Reminder of Evaluation Criteria\n\n1. What the problem attempted (analysis, code, and answered questions) ?\n2. What the problem analysis thought out? (does the program match the plan?)\n3. Does the code execute without syntax error?\n4. Does the code solve the intended problem?\n5. Is the code well written? (easy to understand, modular, and self-documenting, handles errors)\n"
+    },
+    {
+      "metadata": {
+        "trusted": false
+      },
+      "cell_type": "code",
+      "source": "",
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "anaconda-cloud": {},
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3",
+      "language": "python"
+    },
+    "language_info": {
+      "mimetype": "text/x-python",
+      "nbconvert_exporter": "python",
+      "name": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.5.4",
+      "file_extension": ".py",
+      "codemirror_mode": {
+        "version": 3,
+        "name": "ipython"
+      }
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 1: Problem Analysis\n",
-    "\n",
-    "Input: (No user input, but we do read from the file `NYC4-emails.txt`\n",
-    "\n",
-    "Output (The number of emails collected from the file, and a new file `NYC4-emails.txt` with one email per line.\n",
-    "\n",
-    "Algorithm:\n",
-    "\n",
-    "```\n",
-    "(write here)\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Step 2: Write the code\n",
-    "\n",
-    "\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Step 3: Write a program to read the emails from NYC4-emails.txt and print them to the console\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 4: Questions\n",
-    "\n",
-    "1. Does this code actually \"detect\" emails? How does it find emails in the text?\n",
-    "2. Explain how this program can be improved to prompt for an email file at to process runtime?\n",
-    "3. Devise an approach to remove duplicate emails from the output file. You don't have to write as code, just explain it."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reminder of Evaluation Criteria\n",
-    "\n",
-    "1. What the problem attempted (analysis, code, and answered questions) ?\n",
-    "2. What the problem analysis thought out? (does the program match the plan?)\n",
-    "3. Does the code execute without syntax error?\n",
-    "4. Does the code solve the intended problem?\n",
-    "5. Is the code well written? (easy to understand, modular, and self-documenting, handles errors)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "anaconda-cloud": {},
-  "kernelspec": {
-   "display_name": "Python [default]",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "nbformat": 4,
+  "nbformat_minor": 1
 }
