Hello friend, most of it is done now

--- a/content/lessons/08/Now-You-Code/NYC2-Shopping-List.ipynb
+++ b/content/lessons/08/Now-You-Code/NYC2-Shopping-List.ipynb
@@ -10,16 +10,22 @@
         "collapsed": true
       },
       "cell_type": "markdown",
-      "source": "## Step 1: Problem Analysis\n\nInputs:\n\nOutputs:\n\nAlgorithm (Steps in Program):\n\n"
+      "source": "## Step 1: Problem Analysis\n\nInputs: food\n\nOutputs: the list of food\n\nAlgorithm (Steps in Program):\n\n"
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
-      "source": "filename = \"NYC2-shopping-list.txt\"\n## Step 2: write code here\n   ",
-      "execution_count": null,
-      "outputs": []
+      "source": "filename = \"NYC2-shopping-list.txt\"\n## Step 2: write code here\nwith open(filename, 'w') as food:\n    items=input(print(\"Let's make a shopping list! Type 'done' when you finished entering food\"))\n    food.write(items)\n    if food=='done':\n        print(\"Here are the items in %s : %s\" %(filename, food))\n   ",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": "Let's make a shopping list! Type 'done' when you finished entering food\nNonepizza\n",
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
