--- a/content/lessons/08/Now-You-Code/NYC3-Sentiment-v2.ipynb
+++ b/content/lessons/08/Now-You-Code/NYC3-Sentiment-v2.ipynb
@@ -7,26 +7,32 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
-      "source": "## Step 2: Write the LoadWords(filename) function\n\n    ",
-      "execution_count": null,
+      "source": "## Step 2: Write the LoadWords(filename) function\ndef LoadWords(filename):\n    with open(\"NYC3-pos.txt\",'r') as good,open('NYC3-neg.txt', \"r\") as bad:\n        contents=[]\n    return contents\n    ",
+      "execution_count": 4,
       "outputs": []
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "## Quick test of your LoadWords() function\npos = LoadWords(\"NYC3-pos.txt\")\nneg = LoadWords(\"NYC3-neg.txt\")\nprint(\"POSITIVE WORD LIST:\",pos)\nprint(\"NEGATIVE WORD LIST\", neg)",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": "POSITIVE WORD LIST: []\nNEGATIVE WORD LIST []\n",
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "## Step 3: The Final Program\n  \nNow write a program which allows you to enter text and then analyzes the sentiment of the text by printing a score. The program should keep analyzing text input until you enter \"quit\".\n\nSample Run\n\n```\nSentiment Analyzer 1.0\nType 'quit' to exit.\nEnter Text: i love a good book from amazon\n2 positive.\nEnter Text: i hate amazon their service makes me angry\n-2 negative.\nEnter Text: i love to hate amazon\n0 neutral.\nEnter Text: quit\n```\n\n### 3.a Problem Analysis\n\nInput:\n\nOutput:\n\nAlgorithm:\n\n\n\n"
+      "source": "## Step 3: The Final Program\n  \nNow write a program which allows you to enter text and then analyzes the sentiment of the text by printing a score. The program should keep analyzing text input until you enter \"quit\".\n\nSample Run\n\n```\nSentiment Analyzer 1.0\nType 'quit' to exit.\nEnter Text: i love a good book from amazon\n2 positive.\nEnter Text: i hate amazon their service makes me angry\n-2 negative.\nEnter Text: i love to hate amazon\n0 neutral.\nEnter Text: quit\n```\n\n### 3.a Problem Analysis\n\nInput: a sentence\n\nOutput: number of good/bad words in it\n\nAlgorithm:  input a statement, look to see if words are in file, count number of good/bad words, add/cancel out words (cancel if number of good and bad words are the same) *otherwise just add the number up\n\n\n\n"
     },
     {
       "metadata": {
@@ -41,6 +47,15 @@
       "metadata": {},
       "cell_type": "markdown",
       "source": "## Step 4: Questions\n\n1. This is a better solution than sentiment 1.0. Why?\n2. Execute the program and enter the following input: `i love! a GOOD book` What is the score and why? how can this issue be fixed?\n3. Re-write your final solution to address the issues discovered in step 2."
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "#1. what was the first one?\n",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "metadata": {},
