--- a/content/lessons/11/Now-You-Code/NYC3-Historical-Weather.ipynb
+++ b/content/lessons/11/Now-You-Code/NYC3-Historical-Weather.ipynb
@@ -1,104 +1,93 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Now You Code 3: Syracuse Historical Weather\n",
-    "\n",
-    "Write a program to prompt a user to input a date and time string, and then it should **report the temperature and weather conditions on that day and time for Syracuse, NY.**\n",
-    "\n",
-    "To accomplish this, use the Dark Sky Time Machine API, here: https://darksky.net/dev/docs/time-machine \n",
-    "\n",
-    "You're going to have to read about the API and understand how it works before you can write this program, which is the point of the exercise.\n",
-    "\n",
-    "The date and time that the user inputs must be in the following format: `YYYY-MM-DDThh:mm:ss` \n",
-    "\n",
-    "For example January 7, 2016 at 4:30pm would be: `2016-01-07T16:30:00`\n",
-    "\n",
-    "Be sure to use the GPS coordinates for Syracuse, NY which are (lat=43.048122,lng=-76.147424)\n",
-    "\n",
-    "Example Run (Based on the exchange rates from 2017-03-06:\n",
-    "\n",
-    "```\n",
-    "Syracuse, NY Historical Weather\n",
-    "Enter a date and time in the following format: YYYY-MM-DDThh:mm:ss => 2016-07-23T14:30:00\n",
-    "On 2016-07-23T14:30:00 Syracuse, NY was Partly Cloudy with a temperature of  85\n",
-    "```\n"
-   ]
+  "cells": [
+    {
+      "metadata": {},
+      "cell_type": "markdown",
+      "source": "# Now You Code 3: Syracuse Historical Weather\n\nWrite a program to prompt a user to input a date and time string, and then it should **report the temperature and weather conditions on that day and time for Syracuse, NY.**\n\nTo accomplish this, use the Dark Sky Time Machine API, here: https://darksky.net/dev/docs/time-machine \n\nYou're going to have to read about the API and understand how it works before you can write this program, which is the point of the exercise.\n\nThe date and time that the user inputs must be in the following format: `YYYY-MM-DDThh:mm:ss` \n\nFor example January 7, 2016 at 4:30pm would be: `2016-01-07T16:30:00`\n\nBe sure to use the GPS coordinates for Syracuse, NY which are (lat=43.048122,lng=-76.147424)\n\nExample Run (Based on the exchange rates from 2017-03-06:\n\n```\nSyracuse, NY Historical Weather\nEnter a date and time in the following format: YYYY-MM-DDThh:mm:ss => 2016-07-23T14:30:00\nOn 2016-07-23T14:30:00 Syracuse, NY was Partly Cloudy with a temperature of  85\n```\n"
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "#secret key: 087ae10e6a98da069cd508f620f290e9",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "collapsed": true
+      },
+      "cell_type": "markdown",
+      "source": "## Step 1: Problem Analysis\n\nInputs: A date in the format `YYYY-MM-DDThh:mm:ss` \n\nOutputs: the current weather conditions (sunny, rain, partly cloudy) and the temperature.\n\nAlgorithm (Steps in Program):\n\n```\ntodo write algorithm here\n```\n"
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "!pip install -q requests\nimport requests\nimport json",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "# step 2: write code here\nprint(\"Syracuse, NY Historical Weather\")\nkey='087ae10e6a98da069cd508f620f290e9'\nmonth=input(\"Enter a month as 2 digits ie 02 \")\nday=input(\"Enter a day as 2 digits ie 02 \")\nyear=input(\"Enter year as 4 digits ie 2017 \")\nhour=input(\"Enter the hour as two digits, in 24 hour format \")\nminute=input(\"Ender the minute as two digits ie 03 \")\ntimeDay=(year+'-'+month+'-'+day+'T'+hour+':'+minute+':00')\nurl='https://api.darksky.net/forecast/%s/43.048122,-76.147424,%s' %(key, timeDay)\nresponse=requests.get(url)\nweather=requests.get(url)\nconditions=response.json()\ncurrently=conditions['currently']\nprint(currently)\n",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {},
+      "cell_type": "markdown",
+      "source": "## Step 6: Questions\n\n1. What happens when you enter `1/1/2017` as date input? Which error to you get? Fix the program in step 2 so that it handles this error.\n2. Put your laptop in Airplane mode (disable the wifi) and then run the program. What happens? Fix the program in step 4 so that it handles this error."
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "#1. If you put the date as month, day, year, the program can't correctly input the data for the url\n#2. It didn't run, but I think the point is that being off the Wifi you can't ping the website to gather the info. ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {},
+      "cell_type": "markdown",
+      "source": "## Reminder of Evaluation Criteria\n\n1. What the problem attempted (analysis, code, and answered questions) ?\n2. What the problem analysis thought out? (does the program match the plan?)\n3. Does the code execute without syntax error?\n4. Does the code solve the intended problem?\n5. Is the code well written? (easy to understand, modular, and self-documenting, handles errors)"
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "#1. The problem attempted was to create a program to ping the API to gather weather info at a certain time in Syracuse, NY  \n#2. yes\n#3. yes\n#4. yes\n#5. It is written only for Syracuse, NY, but I could have taken the time to allow the user to enter any location. ",
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "anaconda-cloud": {},
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3",
+      "language": "python"
+    },
+    "language_info": {
+      "mimetype": "text/x-python",
+      "nbconvert_exporter": "python",
+      "name": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.5.4",
+      "file_extension": ".py",
+      "codemirror_mode": {
+        "version": 3,
+        "name": "ipython"
+      }
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## Step 1: Problem Analysis\n",
-    "\n",
-    "Inputs: A date in the format `YYYY-MM-DDThh:mm:ss` \n",
-    "\n",
-    "Outputs: the current weather conditions (sunny, rain, partly cloudy) and the temperature.\n",
-    "\n",
-    "Algorithm (Steps in Program):\n",
-    "\n",
-    "```\n",
-    "todo write algorithm here\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# step 2: write code here\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 6: Questions\n",
-    "\n",
-    "1. What happens when you enter `1/1/2017` as date input? Which error to you get? Fix the program in step 2 so that it handles this error.\n",
-    "2. Put your laptop in Airplane mode (disable the wifi) and then run the program. What happens? Fix the program in step 4 so that it handles this error."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reminder of Evaluation Criteria\n",
-    "\n",
-    "1. What the problem attempted (analysis, code, and answered questions) ?\n",
-    "2. What the problem analysis thought out? (does the program match the plan?)\n",
-    "3. Does the code execute without syntax error?\n",
-    "4. Does the code solve the intended problem?\n",
-    "5. Is the code well written? (easy to understand, modular, and self-documenting, handles errors)"
-   ]
-  }
- ],
- "metadata": {
-  "anaconda-cloud": {},
-  "kernelspec": {
-   "display_name": "Python [default]",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "nbformat": 4,
+  "nbformat_minor": 1
 }
